java 25 refactor